fixed alignment issues

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -33,7 +33,7 @@ h1,
 .h1 {
   margin-top: 20px;
   font-family:'Source Sans Pro',Helvetica,Arial,sans-serif;
-  margin-bottom: 20px !important;
+  margin-bottom: -20px !important;
   font-size: 35px !important;
   line-height: 45px !important;
   font-weight: 800 !important;
